--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this is pure art ecommerce website",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [
     "art",
